--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,25 +3,15 @@ version: '3.8'
 services:
   db:
     image: mcr.microsoft.com/mssql/server:2019-latest
-    container_name: mlizsqlserver
     environment:
       - ACCEPT_EULA=Y
       - MSSQL_SA_PASSWORD=781227moi!
     ports:
       - "1433:1433"
-    networks:
-      - app-network
 
-  projectwebapp:
+  app:
     build: .
-    container_name: projectwebapp
     ports:
       - "8080:8080"
     depends_on:
       - db
-    networks:
-      - app-network
-
-networks:
-  app-network:
-    driver: bridge
